// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GtfsTripMovementsInterpolator > 01: works, when the delay increases over time 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       --:--       | --:--       08:12 (12) 
08:05       08:05       | --:--       --:--       | 08:17 (12)  08:17 (12) 
08:10       08:10       | 08:22 (12)  08:22 (12)  | --:--       --:--      
08:15       08:15       | --:--       --:--       | 08:27 (12)  08:30 (15) 
08:20       08:20       | --:--       --:--       | 08:35 (15)  08:38 (18) 
08:25       08:25       | --:--       --:--       | 08:43 (18)  08:46 (21) 
08:30       08:30       | 08:54 (24)  08:54 (24)  | --:--       --:--      
08:35       08:35       | --:--       --:--       | 08:59 (24)  08:59 (24) 
08:40       --:--       | --:--       --:--       | 09:04 (24)  --:--      

"
`;

exports[`GtfsTripMovementsInterpolator > 02: works, when the delay decreases over time 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       --:--       | --:--       08:12 (12) 
08:05       08:05       | --:--       --:--       | 08:17 (12)  08:17 (12) 
08:10       08:10       | 08:22 (12)  08:22 (12)  | --:--       --:--      
08:15       08:15       | --:--       --:--       | 08:27 (12)  08:24 (9)  
08:20       08:20       | --:--       --:--       | 08:29 (9)   08:26 (6)  
08:25       08:25       | --:--       --:--       | 08:31 (6)   08:28 (3)  
08:30       08:30       | 08:30 (0)   08:30 (0)   | --:--       --:--      
08:35       08:35       | --:--       --:--       | 08:35 (0)   08:35 (0)  
08:40       --:--       | --:--       --:--       | 08:40 (0)   --:--      

"
`;

exports[`GtfsTripMovementsInterpolator > 03: works, when the service goes from late to early 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       --:--       | --:--       08:06 (6)  
08:05       08:05       | --:--       --:--       | 08:11 (6)   08:11 (6)  
08:10       08:10       | 08:16 (6)   08:16 (6)   | --:--       --:--      
08:15       08:15       | --:--       --:--       | 08:21 (6)   08:18 (3)  
08:20       08:20       | --:--       --:--       | 08:23 (3)   08:20 (0)  
08:25       08:25       | --:--       --:--       | 08:25 (0)   08:22 (-3) 
08:30       08:30       | 08:24 (-6)  08:24 (-6)  | --:--       --:--      
08:35       08:35       | --:--       --:--       | 08:29 (-6)  08:29 (-6) 
08:40       --:--       | --:--       --:--       | 08:34 (-6)  --:--      

"
`;

exports[`GtfsTripMovementsInterpolator > 04: works, when only the termination time is given 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       --:--       | --:--       08:05 (5)  
08:05       08:05       | --:--       --:--       | 08:10 (5)   08:10 (5)  
08:10       08:10       | --:--       --:--       | 08:15 (5)   08:15 (5)  
08:15       08:15       | --:--       --:--       | 08:20 (5)   08:20 (5)  
08:20       08:20       | --:--       --:--       | 08:25 (5)   08:25 (5)  
08:25       08:25       | --:--       --:--       | 08:30 (5)   08:30 (5)  
08:30       08:30       | --:--       --:--       | 08:35 (5)   08:35 (5)  
08:35       08:35       | --:--       --:--       | 08:40 (5)   08:40 (5)  
08:40       --:--       | 08:45 (5)   --:--       | --:--       --:--      

"
`;

exports[`GtfsTripMovementsInterpolator > 05: works, when only the origination time is given 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       08:30 (30)  | --:--       --:--      
08:05       08:05       | --:--       --:--       | 08:35 (30)  08:35 (30) 
08:10       08:10       | --:--       --:--       | 08:40 (30)  08:40 (30) 
08:15       08:15       | --:--       --:--       | 08:45 (30)  08:45 (30) 
08:20       08:20       | --:--       --:--       | 08:50 (30)  08:50 (30) 
08:25       08:25       | --:--       --:--       | 08:55 (30)  08:55 (30) 
08:30       08:30       | --:--       --:--       | 09:00 (30)  09:00 (30) 
08:35       08:35       | --:--       --:--       | 09:05 (30)  09:05 (30) 
08:40       --:--       | --:--       --:--       | 09:10 (30)  --:--      

"
`;

exports[`GtfsTripMovementsInterpolator > 06: works, when arrival times differ from departure times, and delay decreases over time 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       08:30 (30)  | --:--       --:--      
08:10       08:25       | --:--       --:--       | 08:40 (30)  08:47 (22) 
08:30       08:30       | --:--       --:--       | 08:52 (22)  08:45 (15) 
08:35       08:50       | --:--       --:--       | 08:50 (15)  08:57 (7)  
09:00       --:--       | 09:00 (0)   --:--       | --:--       --:--      

"
`;

exports[`GtfsTripMovementsInterpolator > 07: works, when arrival times differ from departure times, and delay increases over time 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       08:00 (0)   | --:--       --:--      
08:10       08:25       | --:--       --:--       | 08:10 (0)   08:32 (7)  
08:30       08:30       | --:--       --:--       | 08:37 (7)   08:45 (15) 
08:35       08:50       | --:--       --:--       | 08:50 (15)  09:12 (22) 
09:00       --:--       | 09:30 (30)  --:--       | --:--       --:--      

"
`;

exports[`GtfsTripMovementsInterpolator > 08: works, when passing movements are included 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       --:--       | --:--       08:12 (12) 
08:05       08:05       | --:--       --:--       | 08:17 (12)  08:17 (12) 
--:--       --:--       | --:--       --:--       | --:--       --:--      
08:10       08:10       | 08:22 (12)  08:22 (12)  | --:--       --:--      
--:--       --:--       | --:--       --:--       | --:--       --:--      
08:15       08:15       | --:--       --:--       | 08:27 (12)  08:30 (15) 
08:20       08:20       | --:--       --:--       | 08:35 (15)  08:38 (18) 
08:25       08:25       | --:--       --:--       | 08:43 (18)  08:46 (21) 
--:--       --:--       | --:--       --:--       | --:--       --:--      
--:--       --:--       | --:--       --:--       | --:--       --:--      
--:--       --:--       | --:--       --:--       | --:--       --:--      
08:30       08:30       | 08:54 (24)  08:54 (24)  | --:--       --:--      
08:35       08:35       | --:--       --:--       | 08:59 (24)  08:59 (24) 
--:--       --:--       | --:--       --:--       | --:--       --:--      
08:40       --:--       | --:--       --:--       | 09:04 (24)  --:--      

"
`;
